# libviper

./: .clang-format  CMakeLists.txt  Makefile  README.md  changelog
.github/workflows/: build.yaml  ci.yaml
cmake/: dependencies.cmake
example/: CMakeLists.txt  main.cpp
example/conf/: app.conf.yaml
lib/: CMakeLists.txt
lib/viper/: CMakeLists.txt  config.cpp  config.h  config_test.cpp  leaf.cpp  leaf.h  leaf_test.cpp  tree.cpp  tree.h  tree_test.cpp  value.cpp  value.h  value_test.cpp  viper.cpp  viper.h  viper_test.cpp
lib/viper/testdata/: conf.yaml
